--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 ---
 layout: home
 search_exclude: true
-image: images/logo.png
+image: images/CC-logo-white.png
 ---
 
-This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks.
+<!-- This site is built with [fastpages](https://github.com/fastai/fastpages), An easy to use blogging platform with extra features for Jupyter Notebooks. -->
 
-![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages")
+<!-- ![]({{site.baseurl}}/images/diagram.png "https://github.com/fastai/fastpages") -->
 
-[fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).  
+<!-- [fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).   -->
 
-You can edit the `index.html` file to change this content.
+<!-- This is ChongChong He's blog on computational science which focuses on applying Python and Julia to computational physics, astrophysics, and machine learning.  -->
+This is a site where I post blogs on computational science with a focus on applying Python and Julia to computational physics/astrophysics and machine learning. You could also check my [personal website](https://chongchonghe.github.io/) or my [github repos](https://github.com/chongchonghe/).
 
 # Posts
