deploy: 9f00a5f5e8d13a89c5bcd5359526cefecc259afe

--- a/index.html
+++ b/index.html
@@ -93,12 +93,11 @@ window.onload = wrap_img;
 
 <!-- [fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).   -->
 
-<p><img src="/computational-science/images/KH-narrow.png" alt="" title="https://github.com/chongchonghe/Hydro.jl" /></p>
+<p><a href="https://github.com/chongchonghe/Hydro.jl"><img src="/computational-science/images/KH-narrow.png" alt="" /></a></p>
 
 <!-- This is ChongChong He's blog on computational science which focuses on applying Python and Julia to computational physics, astrophysics, and machine learning.  -->
-<div style="font-size: 1.5em;">
-This is a site where I post blogs on computational science with a focus on applying Python and Julia to computational physics/astrophysics and machine learning. You could also check my [personal website](https://chongchonghe.github.io/) or my [github repos](https://github.com/chongchonghe/).
-</div>
+
+<p style="font-size: 1.4em;">This is a site where I post blogs on computational science with a focus on applying Python and Julia to computational physics/astrophysics and machine learning. You could also check my <a href="https://chongchonghe.github.io/">personal website</a> or my <a href="https://github.com/chongchonghe/">github repos</a>.</p>
 
 <h1 id="posts">Posts</h1>
 
