--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@ image: images/CC-logo-white.png
 
 <!-- [fastpages](https://github.com/fastai/fastpages) automates the process of creating blog posts via GitHub Actions, so you don't have to fuss with conversion scripts.  A full list of features can be found on [GitHub](https://github.com/fastai/fastpages).   -->
 
-[![]({{site.baseurl}}/images/KH-narrow.png)](https://github.com/chongchonghe/Hydro.jl)
-
-<!-- This is ChongChong He's blog on computational science which focuses on applying Python and Julia to computational physics, astrophysics, and machine learning.  -->
+[![]({{site.baseurl}}/images/KH-narrow.png)](https://github.com/chongchonghe/Hydro.jl#kelvin-helmholz-instability)
 
 <p style="font-size: 1.4em;">This is a site where I post blogs on computational science with a focus on applying Python and Julia to computational physics/astrophysics and machine learning. You could also check my <a href='https://chongchonghe.github.io/'>personal website</a> or my <a href='https://github.com/chongchonghe/'>github repos</a>.</p>
+
+<!-- This is a site where I post blogs on computational science with a focus on applying Python and Julia to computational physics/astrophysics and machine learning. You could also check my [personal website](https://chongchonghe.github.io/) or my [github repos](https://github.com/chongchonghe/). -->
+
+
 
 # Posts
